# binaries

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
creates/binaries_ui/: Cargo.toml
creates/binaries_ui/macros/: Cargo.toml
creates/binaries_ui/macros/src/: lib.rs
creates/binaries_ui/src/: context.rs  input.rs  layout.rs  lib.rs  shape.rs  traits.rs  utils.rs
creates/binaries_ui/src/components/: binding.rs  button.rs  element.rs  element_set.rs  mod.rs  stack.rs  stacks.rs
creates/binaries_ui/src/storage/: mod.rs
creates/binaries_ui/src/text/: mod.rs  text_shape.rs
examples/: alignment_items.rs  basic.rs  basic_layout.rs  drawfn.rs  graph_node.rs  layout.rs  layout_with_cube.rs
examples/views/: layout_gallery.rs  mod.rs  node_test.rs
src/: context.rs  node.rs
